--- a/app/src/main/res/layout/select_file_fragment.xml
+++ b/app/src/main/res/layout/select_file_fragment.xml
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:text="@string/tvSelectFileFragment_FileNameHeader"
-            android:textSize="20sp" />
+            android:textSize="20sp"/>
 
         <TextView
             android:id="@+id/tvSelectFileFragment_FileNameDetails"
@@ -65,7 +65,9 @@
             android:layout_margin="2dp"
             android:layout_toEndOf="@id/tvSelectFileFragment_FileNameHeader"
             android:text="@string/temp"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:maxLines="1"
+            android:ellipsize="end"/>
 
         <TextView
             android:id="@+id/tvSelectFileFragment_FileSizeHeader"
